traffic-management/grpc/grpcstore.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grpcstore-demo
  name: grpcstore-demo
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: grpcstore-demo
  sessionAffinity: None
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: grpcstore-demo
  name: grpcstore-demo
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: grpcstore-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: grpcstore-demo
    spec:
      containers:
      - image: docker.io/soloio/grpcstore-demo
        imagePullPolicy: Always
        name: grpcstore-demo
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
