traffic-management/grpc/tcp-gateway.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: tcp
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8000
  tcpGateway:
    tcpHosts:
      - name: one
        destination:
          single:
            upstream:
              name: default-grpcstore-demo-80
              namespace: gloo-system
  useProxyProto: false
