traffic-management/grpc/rest-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - methods:
              - GET
            prefix: /
        routeAction:
          single:
            destinationSpec:
              grpc:
                function: ListItems
                package: solo.examples.v1
                service: StoreService
            upstream:
              name: default-grpcstore-demo-80
              namespace: gloo-system
